🐛  Fixes wrong padding on opinionated .grit class

--- a/src/grit.less
+++ b/src/grit.less
@@ -48,7 +48,7 @@
 .grit {
     --grt-cols: var(--grt-cols-mobile);
     --grt-padd-cols-l: var(--grt-padding-cols-mobile);
-    --grt-padd-cols-r: var(--grt-padding-cols-desktop);
+    --grt-padd-cols-r: var(--grt-padding-cols-mobile);
     .grit-mixin();
 }
 
@@ -244,6 +244,8 @@
     /* .grit */
     .grit {
         --grt-cols: var(--grt-cols-desktop);
+        --grt-padd-cols-l: var(--grt-padding-cols-desktop);
+        --grt-padd-cols-r: var(--grt-padding-cols-desktop);
     }
 
     /* .grit-x */
